# lumen

./: .gitignore  ADVERSARIAL_REVIEW.md  CONSTITUTION.md  LIMITATIONS.md  README.md  SECURITY.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  audit.py  briefing.py  claim_extraction.py  contradiction.py  main.py  models.py  scoring.py  source_graph.py
apps/api/tests/: test_audit.py  test_briefing.py  test_claim_extraction.py  test_contradiction.py  test_scoring.py  test_source_graph.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json
apps/web/scripts/: verify-static-ui.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/architecture/: DATA_MODEL.md  MVP_PHASES.md  MVP_SCOPE.md  PROJECT_BLUEPRINT.md  SYSTEM_OVERVIEW.md
docs/audits/: README.md  SCAFFOLD_AUDIT.md  scaffold_inventory.json
docs/forensics/: README.md
docs/forensics/swarms/: 2026-05-24_lumen-v0-3-contract-demo.log.md
docs/governance/: AUDIT_TRAIL_SPEC.md  BIAS_RESISTANCE.md  CONFIDENCE_SCORING.md  GOVERNANCE_RULES.md
docs/postmortems/: README.md
docs/sops/: CHANGELOG.md  IMPLEMENTATION_POSTMORTEM_TEMPLATE.md  SOP_INSTITUTIONAL_MEMORY.md  SWARM_AFTER_ACTION_REPORT_TEMPLATE.md
docs/swarms/: 2026-05-24_lumen-v0-3-contract-demo.md  README.md  index.jsonl
evals/: README.md  eval_plan.md  golden_cases.json
examples/: sample_article.json  sample_audit_trail.json  sample_briefing.json  sample_claim_matrix.json
scripts/: README.md  new_report.py  regen_indexes.py
scripts/tests/: test_institutional_memory.py
(+8 files in other folders)
