[project]
name = "lumen-api"
version = "0.2.0"
description = "Deterministic local FastAPI core for Lumen claim/evidence analysis primitives."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "apps/api"]
testpaths = ["apps/api/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
